--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^23.0.0"
+  },
+  "dependencies": {
+    "electron-packager": "^17.1.1"
   }
 }
